# does-code-quality-still-matter

./: .env.example  .gitignore  EXPERIMENT.md  README.md  analyze.py  index.html  orchestrate.py  package-lock.json  package.json  pyproject.toml  server.js  todos.json
api/: index.js
clean/: drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts
clean/app/: layout.tsx  page.tsx
clean/app/(private)/: layout.tsx
clean/app/[locale]/: layout.tsx
clean/app/_components/: providers.tsx
clean/components/auth/: auth-form.tsx
clean/components/todos/: app-header.tsx  dashboard.tsx  delete-dialog.tsx  file-drop-zone.tsx  kanban-board.tsx  stats-bar.tsx  todo-dialog.tsx  todo-item.tsx  todo-list.tsx  todos-provider.tsx  toolbar.tsx
clean/db/: index.ts
clean/db/schemas/: api-tokens.ts  attachments.ts  folders.ts  index.ts  notes.ts  shares.ts  todo-shares.ts  (+2 more)
clean/drizzle/: 0000_amazing_anita_blake.sql  0000_naive_omega_red.sql  0000_nifty_agent_brand.sql  0000_productive_darkhawk.sql
clean/dto/: api-token.ts  attachment.ts  folder.ts  note.ts  share.ts  todo.ts  user.ts
clean/hooks/: use-todos.ts
clean/lib/: api.ts  auth.ts  email.ts  request.ts  schemas.ts  todos.ts  types.ts
clean/messages/: en.json  es.json  pt-BR.json
clean/providers/: email.ts
clean/utils/: formatters.ts
prompts/: context_init.txt  refactor.txt
public/: index.html
smelly/: .env.example  package-lock.json  package.json  server.js
smelly/api/: index.js  index.test.js
smelly/public/: index.html
uploads/: 1d47b8e3a444ffd1.html  a6fe2e5fa95e5c4c.js
(+107 files in other folders)
