[project]
name = "does-code-quality-still-matter"
version = "0.1.0"
description = "Experiment comparing how code quality affects the cost of AI-assisted feature development"
requires-python = ">=3.12"
dependencies = [
    "tabulate>=0.9",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
